    - ~C-c C-a~ is bound to *iedit-show/hide-context-lines*.
- Improved Janet support: add *pel-janet-activates-minor-modes* user-option which can be
  used to automatically activate minor modes in janet buffer.
- Add extra key binding for the patch commands in the ~<f11> d p~ prefix.
- In c-mode add the ~<f12> ? ?~ key binding to man.  Use to open a man page on a C topic.
** New Features:
- New: support the *ivy-hydra* package installation via the *pel-use-ivy-hydra* user-option.
- New: when *pel-use-counsel* user-option is set, the ~<f11> f L~  key
  sequence is bound to *counsel-locate* instead to the plain *locate* command.
- New: *pel-make-forward-conditional* and *pel-make-backward-conditional*
  bound to ~<f6> <right>~ and ~<f6> <left>~ respectively
  in make files allow navigation across if-endif statements.
  Also, the *pel-make-outward-forward-conditional* and
  *pel-make-outward-backward-conditional* bound to ~<f6> <down>~ and ~<f6>
  <up>~ respectively in make files allow navigation outward of if-endif
  statements.
  These commands are built on flexible syntax parsing functions in the
  pel-syntax.el file and regular expressions. It's possible to build other
  conditional navigation for other languages using these pel-syntax functions.
- New *pel-show-filemng-status* command (bound to ~<f11> f ?~ that shows the
  status of several file management related status: file encoding, the way
  pel-open-at-point resolves relative file paths.
- Preliminary support for MscGen markup files when *pel-use-mscgen-mode* is
  set to t.  File extensions supported are =.msc= and =.msc.txt= .
  Support provided by the [[https://github.com/thomsten/mscgen-mode#readme][mscgen-mode]] GitHub project.
  The ~<f12>~ key prefix is available in mscgen-mode buffers, providing quick
  access to the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/mscgen.pdf][MscGen PEL PDF file]], the PEL customization and mscgen-mode